# hello-grpc

./: BUILD.bazel  WORKSPACE  cloudbuild.yaml  hellogrpc.go  hellogrpc.proto
pb/: BUILD.bazel  hellogrpc.proto
srv/: BUILD.bazel  main.go
