load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_library")

gazelle(
    name = "gazelle",
    prefix = "github.com/kyleconroy/hellogrpc",
)

go_library(
    name = "go_default_library",
    srcs = ["hellogrpc.go"],
    importpath = "github.com/kyleconroy/hellogrpc",
    visibility = ["//visibility:public"],
    deps = [
        "//pb:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
