load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_grpc_library")

proto_library(
    name = "pb_proto",
    srcs = ["hellogrpc.proto"],
    visibility = ["//visibility:public"],
)

go_grpc_library(
    name = "pb_go_proto",
    importpath = "github.com/kyleconroy/hellogrpc/pb",
    proto = ":pb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    importpath = "github.com/kyleconroy/hellogrpc/pb",
    library = ":pb_go_proto",
    visibility = ["//visibility:public"],
)
